Adding gulp and reload capability.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.6"
+    "jshint": "^2.5.6",
+    "browser-sync": "^2.10.1",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.4"
   }
 }
