--- a/package.json
+++ b/package.json
@@ -20,9 +20,18 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.6",
     "browser-sync": "^2.10.1",
     "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.4"
+    "gulp-nodemon": "^2.0.4",
+    "jasmine": "^2.4.1",
+    "jshint": "^2.5.6",
+    "karma": "^0.13.16",
+    "karma-coverage": "^0.5.3",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.2",
+    "karma-requirejs": "^0.2.2",
+    "karma-spec-reporter": "0.0.23",
+    "phantomjs": "^1.9.19",
+    "requirejs": "^2.1.22"
   }
 }
